Big Data/Day 06 24-04 spark j.protocol.Py4JJavaError An error o (1)..txt
                                       
>>> rdd1.take(5)                                                                            

>>> rdd1 = sc.textFile("/user/cddacmaylab4015/uber_data")                                   
>>> rdd1.count()                                                                            
[Stage 1:>                                                                                  
                                                                                   (0 + 1) /
[Stage 1:===================================================================================
>                                                                                  (1 + 1) /


355
>>> rdd1.take(5)                                                                            
['dispatching_base_number,date,active_vehicles,trips', 'B02512,1/1/2015,190,1132', 'B02765,1
/1/2015,225,1765', 'B02764,1/1/2015,3427,29421', 'B02682,1/1/2015,945,7679']                
>>> rdd1.count()                                                                            
355                                                                                         
>>> header = rdd1.first()                                                                   
>>> print(header)                                                                           
dispatching_base_number,date,active_vehicles,trips                                          
>>>rdd2=rdd1.filter(lambda a : a!= header)                                                  
>>> rdd2=count()                                                                            
Traceback (most recent call last):                                                          
  File "<stdin>", line 1, in <module>                                                       
NameError: name 'count' is not defined                                                      
>>> rdd2.count()                                                                            
354                                                                                         
>>> for line in rdd2.take(5):                                                               
... print(line)                                                                             
  File "<stdin>", line 2                                                                    
    print(line)                                                                             
    ^                                                                                       
IndentationError: expected an indented block                                                
>>> for line in rdd2.take(5):                                                               
...     print(line)  

##############################################################################################

>>> from datetime import datetime                                                           
>>> format_date = "%m/%d/%Y"                                                                
>>> print(format_date)                                                                      
%m/%d/%Y 

>>> print(datetime.strptime("04/24/2026",format_date))                                      
2026-04-24 00:00:00                                                                         
>>> print(datetime.strpftime("04/24/2026",format_date))  


>>> print(datetime.strptime("04/24/2026",format_date).strftime("%A"))                       
Friday                                                                                      
>>> print(datetime.strptime("04/24/2026",format_date).strftime("%B"))                       
April   

>>> rdd3 = rdd2.map(lambda a :(a.split(",")[0],datetime.strptime(a.split(",")[1],format_date).strftime("%A"),a.split(",")[2]))                                                           
>>> for line in rdd3.take(5):                                                               
...     print(line) 

>>> rdd4 = rdd3.map(lambda a : (a[0] + " "+a[1],int(a[2]) ))                                
>>> for line in rdd4.take(5):                                                               
...     print(line) 

>>> rdd5 = rdd4.reduceBykey(lambda a,b : a+b)     

>>>rdd5 = rdd4.reduceByKey(lambda a,b : a+b)                                                
>>> rdd3 = rdd2.map(lambda a : (a.split(",")[0], datetime.strptime(a.split(",")[1],format_date).strftime("%A"), a.split(",")[2] ))                                                      
>>> for line in rdd4.take(5):      


>>> rdd5 = rdd4.reduceByKey(lambda a,b : a+b)                                               
>>> rdd6 = rdd2.map(lambda a : (a.split(",")[0], datetime.strptime(a.split(",")[1],format_da
te).strftime("%A"), a.split(",")[3] ))                                                      
>>> rdd7 = rdd6.map(lambda a : (a[0] + " " + a[1], int(a[2]) ))                             
>>> for line in rdd7.take(5):                                                               
...     print(line)   

>>> rdd8 = rdd7.reduceByKey(lambda a, b : a + b)
>>> 
>>> for line in rdd8.take(5):                                                               
...     print(line)     



